data/all_generated_tests/raw_wast_tests/unreachable_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1697.wast
;; 8. **Import Function with `unreachable` in Loop and Exported from Caller:**    - Build a module importing a function that contains a loop, and at some point in the loop, an `unreachable` instruction is executed. The importing module then exports its function, which calls this loop.    - **Constraint:** Affirms whether the exporting module handles the trap from `unreachable` correctly during looping operations.

(assert_invalid
  (module
    (import "env" "extern_func" (func $extern_func (result i32)))
    (func $caller_func (type 0)
      (result i32) 
      (block
        (loop
          (call $extern_func)
          (unreachable)
        )
      )
    )
    (export "caller_func" (func $caller_func))
  )
  "type mismatch"
)